--- a/active/bastion.yaml
+++ b/active/bastion.yaml
@@ -16,12 +16,12 @@ Parameters:
     Description: 'Deployment Environment'
 
   ContactInfo:
-    Typ: String
+    Type: String
     Default: 'VPC Group'
     Description: 'Contact for VPC'
 
   ContactEmail:
-    Typ: String
+    Type: String
     Default: 'vpcgroup@company.info'
     Description: 'Contact email for VPC'
 
