Fix Additional Typos

--- a/active/a1/stack.yaml
+++ b/active/a1/stack.yaml
@@ -126,9 +126,9 @@ Metadata:
 Mappings:
   MapRegion:
     us-east-1:
-      Name: UE1
+      Name: ue1
     us-west-2:
-      Name: UW2
+      Name: ue2
 
 Resources:
   ClientIAM:
