--- a/active/a1/stack.yaml
+++ b/active/a1/stack.yaml
@@ -66,7 +66,7 @@ Parameters:
     Description: 'Maximum ASG fleet size'
 
   HighCPUAlarm:
-    Type: Double
+    Type: Number
     Default: '50'
     AllowedValues:
       - '50'
@@ -78,7 +78,7 @@ Parameters:
     Description: 'High CPU Threshold for Instances'
 
   LowCPUAlarm:
-    Type: Double
+    Type: Number
     Default: '20'
     AllowedValues:
       - '10'
